# lazyimread

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  example.ipynb  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml  python-publish.yml
src/lazyimread/: __init__.py  async_loading.py  async_utils.py  dimension_utils.py  dummy_data_generator.py  gui_load.py  gui_utils.py  lazyimread.py  saving_utils.py
tests/: __init__.py  dummy_data_generator.py  test_async_loading.py  test_lazyloader.py
