[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazyimread"
version = "0.1.2"
description = "A lazy image reading library for various file formats"
authors = [{ name = "Yehe Liu", email = "yehe@case.edu" }]
license = { text = "CC0 1.0 Universal (CC0 1.0) Public Domain Dedication" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "tifffile",
    "h5py",
    "zarr",
    "xmltodict",
    "PyYAML",
]


[project.optional-dependencies]
dev = ["pytest", "matplotlib", "ruff", "pytest-asyncio", "tox", "pre-commit"]

[tool.hatch.build.targets.wheel]
packages = ["src/lazyimread"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "D",
    "UP",
    "S",
    "BLE",
    "FBT",
    "B",
    "C4",
    "T20",
    "PT",
    "Q",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["lazyimread"]

[tool.ruff.lint.pydocstyle]
convention = "google"
